# tote-betting-totalisator

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.MD
cmake/: configuration.cmake  manifest.cmake
cmake/modules/: Findcatch.cmake
documentation/: API.md  DESIGN.md  STANDARDS.md  UML.md
source/: bet.hpp  main.cpp  product.hpp  race.hpp  settings.hpp  totalisator.cpp  totalisator.hpp
source/detail/: totalisator_impl.cpp  totalisator_impl.hpp
test/acceptance/: CMakeLists.txt
test/acceptance/source/: totalisator_acceptance_test_suite.cpp
test/integration/: CMakeLists.txt
test/integration/source/: totalisator_integration_test_suite.cpp
test/unit/: CMakeLists.txt
test/unit/source/: bet_unit_test_suite.cpp  race_unit_test_suite.cpp  settings_unit_test_suite.cpp
